<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tiago_simulator</name>
  <version>2.1.0</version>
  <description>Tiago Simulator</description>
  <maintainer email="josemiguel.guerrero@urjc.es">Jose Miguel Guerrero</maintainer>
  <license>Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tiago_simulation</depend>
  <depend>teleop_tools</depend>
  <depend>hey5_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
